  * Improvement: the :has() selector now supports relative selectors. For example, the query
    "div:has(> a)" will select all "div" elements that have at least one direct child "a" element.
    <https://github.com/jhy/jsoup/pull/1214>

  * Improvement: added Element chaining methods for various overridden methods on Node.
    <https://github.com/jhy/jsoup/issues/1193>

  * Bugfix: if duplicate attributes in an element exist, retain the first vs the last attribute with the same name. Case
    aware (HTML case-insensitive names, XML are case-sensitive).
    <https://github.com/jhy/jsoup/issues/1219>

  * Bugfix: don't submit input type=button form elements.
    <https://github.com/jhy/jsoup/issues/1231>

  * Various code hygiene updates.

**** Release 1.12.1 [2019-May12]
  * Change: removed deprecated method to disable TLS cert checking Connection.validateTLSCertificates().

  * Change: some internal methods have been rearranged; if you extended any of the Jsoup internals you may need to make
    updates.

  * Improvement: documents now remember their parser, so when later manipulating them, the correct HTML or XML tree
    builder is reused, as are the parser settings like case preservation.
    <https://github.com/jhy/jsoup/issues/769>

  * Improvement: Jsoup now detects the character set of the input if specified in an XML Declaration, when using the
    HTML parser. Previously that only happened when the XML parser was specified.
    <https://github.com/jhy/jsoup/issues/1009>

  * Improvement: if the document's input character set does not support encoding, flip it to one that does.
    <https://github.com/jhy/jsoup/issues/1007>

  * Improvement: if a start tag is missing a > and a new tag is seen with a <, treat that as a new tag. (This differs
    from the HTML5 spec, which would make at attribute with a name beginning with <, but in practice this impacts too
    many pages.
    <https://github.com/jhy/jsoup/issues/797>
